# diagweave

./: .gitignore  Cargo.toml  README.md  README_CN.md  plan-cloud-native-stack.md
diagweave/: Cargo.toml
diagweave/benches/: report_bench.rs
diagweave/schemas/: report-otel-v0.1.0.schema.json  report-v0.1.0.schema.json
diagweave/scripts/: test-feature-matrix.ps1
diagweave/src/: adapters.rs  lib.rs  otel.rs  render.rs  report.rs  trace.rs  tracing_export.rs  utils.rs
diagweave/src/adapters/: otel.rs  trace.rs
diagweave/src/otel/: opentelemetry.rs
diagweave/src/render/: ir.rs  json.rs  otel_snapshot.rs  pretty.rs  stack_filter.rs
diagweave/src/render/json/: attachment.rs  helpers.rs  report.rs  trace.rs
diagweave/src/report/: accessors.rs  builder.rs  ext.rs  global.rs  impls.rs  internal.rs  source_view.rs  store.rs  trace.rs  transform.rs  types.rs
diagweave/src/report/types/: attachment.rs  config.rs  context.rs  error.rs  source_error.rs
diagweave/src/trace/: tracing.rs
diagweave/src/tracing_export/: tracing.rs
diagweave/tests/: derive_error.rs  derive_ok.rs  global_config.rs  macro_ok.rs  report.rs  report_ir.rs  report_ir_tracing.rs  report_json.rs  report_more.rs  report_snapshots.rs  set_derive_ok.rs  trybuild.rs  union_ok.rs
diagweave/tests/report_common/: mod.rs
diagweave/tests/snapshots/: report_snapshots__snap_json_basic.snap  report_snapshots__snap_json_with_attachments.snap  report_snapshots__snap_json_with_source_errors.snap  report_snapshots__snap_json_with_trace.snap  report_snapshots__snap_otel_basic.snap  report_snapshots__snap_otel_with_diag_sources.snap  report_snapshots__snap_otel_with_payload.snap  report_snapshots__snap_otel_with_trace.snap  report_snapshots__snap_pretty_basic.snap  report_snapshots__snap_pretty_nested_sources.snap  report_snapshots__snap_pretty_with_all_sections.snap  report_snapshots__snap_pretty_with_system_context.snap
diagweave/tests/ui/: union_safe_mode_pub_external.rs
diagweave/tests/ui-pass/: union_visibility_strict_private_ok.rs
diagweave/tests/ui/derive/: from_requires_single_field.rs  from_requires_single_field.stderr  missing_error_attr.rs  missing_error_attr.stderr  set_copy_fail.rs  set_copy_fail.stderr  transparent_requires_single_field.rs  transparent_requires_single_field.stderr
diagweave/tests/ui/display/: display_transparent_requires_single_tuple_field.rs  display_transparent_requires_single_tuple_field.stderr  display_unknown_placeholder.rs  display_unknown_placeholder.stderr  display_unmatched_brace.rs  display_unmatched_brace.stderr  from_requires_single_tuple_field.rs  from_requires_single_tuple_field.stderr
diagweave/tests/ui/set-algebra/: conflicting_variant_shape.rs  conflicting_variant_shape.stderr  cycle_dependency.rs  cycle_dependency.stderr  union_duplicate_variant_name.rs  union_duplicate_variant_name.stderr  unknown_set.rs  unknown_set.stderr
diagweave/tests/ui/visibility/: union_visibility_auto_pub_crate_boundary.rs  union_visibility_auto_pub_crate_boundary.stderr
examples/cloud-native-stack/: Cargo.toml  README.md  README_CN.md
examples/cloud-native-stack/src/: main.rs
(+32 files in other folders)
