[package]
name = "diagweave"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Core runtime and macros re-export for diagweave error algebra and report diagweaveing."
readme.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords = ["error-handling", "diagnostics", "result", "diagweave"]
categories = ["rust-patterns", "development-tools::debugging"]

[dependencies]
diagweave-macros.workspace = true
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"], optional = true }
serde_json = { workspace = true, features = ["alloc"], optional = true }
tracing = { workspace = true, optional = true }

[dev-dependencies]
trybuild = "1.0"

[features]
default = ["std", "json", "trace"]
std = []
json = ["dep:serde", "dep:serde_json"]
trace = []
tracing = ["trace", "dep:tracing"]

[lints]
workspace = true
