[package]
name = "cloud-native-stack"
version = "0.1.0"
edition = "2024"
publish = false
description = "Cloud-native error handling showcase for diagweave"
license = "MIT"

[dependencies]
diagweave = { workspace = true, features = ["json", "trace", "otel", "tracing"] }
serde_json = "1"
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "std"] }

[lints]
workspace = true
